@@ -1,6 +1,6 @@
-DIST faust-0.9.30.tar.gz 8309951 SHA256 4c9df66d2e46fb710d0cfe03466bbd83551d63e4b4e1fd9c86ad9d745ffc2aec SHA512 b6ccfd219b98c5a217ecd670143b869845f0636a7952fab348f34ebd6ca9d1b761cbc4d7caec69210df81b4e6f4cbe81762bfd45b1156c7abb8af14cabd20333 WHIRLPOOL df992eba48c0620adfeedb8931e3993efc94e00b52ca277da71c64d4455410c855cbcba3f08432b2456b0875dd004fc1417f8459e185c08a7d9f50742e1af312
-DIST faust-0.9.58.zip 9348025 SHA256 122fb0e7f955ecd59b6185309ae287796878135019f49b5014cc812376b45409 SHA512 9d64494202c0c41e5e4d24c0f04318685acf4e9188f5bd36bceb5daf2f0d6b8c4cab33fdf9eb9da8b9da9ede17add8fd2ec8aeb553af748037ad0980341f16e2 WHIRLPOOL b5db26cef2b743e2ce1323ade48a3b540ad4c7851b81aaf490da6f93cf2e86693aa62f7b9c98abf192c414623286dd94da643c8eacf054281e30a9db171f8a5c
-EBUILD faust-0.9.30.ebuild 967 SHA256 b3b0aac9b948cdda44f657d42c15d0765b91c4208cc38c50610e20bb25e0d143 SHA512 cc004796466bda83cd09a5a183c296e75baf3b76c439352fa402d4c40835323db716c5f95107a97b96e0a7f942cafdeb93a0d203c857bd914c38f8f5d5e60c0e WHIRLPOOL 35682ab19b8255bf118cd30a24de7ce3799907aa5cd50be205a347956b1188bd586a5b71e6ef98b1686f8c3183cb29220a4f3120d97fb7c782fea433c2f5b423
-EBUILD faust-0.9.58.ebuild 966 SHA256 252ec4fa864d3fa66372fa98e248ab89b2735942f861cc7a471dd1473866c7cd SHA512 ee6cc8a5ceac52617ea8efcd5c80f2cf984910be4195cd313dfa8f7ba5bf2bb762b749a7d1288ee5c5c7fdf18b9e011890f996af94611b6d0dbc1c157b31af13 WHIRLPOOL 3e8ee67534aeccc1e2008df34860c7db2a069b929374a09020d68e6279c7e7b85ef2b9d642c911a6783d7a92b7ac4d49dcd3baaa6ad5e1bf3d8ce34ddbd89486
-MISC ChangeLog 665 SHA256 91077739d0698018ef0093cb7fde8ba100702d08bfbfb55ff4237ab7c8b67d9f SHA512 c18893bbe4f770cc4415960753a489f8907f9321af6bf1a7ea69faa49a0a65114b229a232e996d231dfe39ce30f92c7db3e170072d37603dcf6cf2414f58dec1 WHIRLPOOL 2d0c396eb2d800db1d772c1e8ba5a63f4c9ebfbe0c5b7439189815e0cabbb292dad7425a898e8d96a5f168cd8a7689ddce2d5eb9f515d789f72bd1fcf303d7e8
+DIST faust-0.9.58.zip 9339667 SHA256 958b7373cbe47745f3d99721d00559025ea808bb2ee468edf5b7ced1c849eae1 SHA512 cf544fb0b77be61252f2a558b6952989524364dfe1f6f3eaab562ec532150681704fb3716f5957f046d5fab71bdc0cf9a8df73bff8574e8497315eeacf3b5366 WHIRLPOOL a45469848dd3c9640411b710eb21ae22ddefcf89784b3fa52c257b55709f468a03d325ed5209554d98b8e6f6b0d9feb30714c4842231dba1dd5faa0a79f664de
+DIST faust-0.9.67.zip 12407822 SHA256 a176d435035c8c7f4c5b6c7162e62d3d83143f64cc713b2f91c07e334aa21b19 SHA512 08c2fbdb49d9543dd1ca09b71490a0632f1e2a9081fcf04ca84ce49f8bca629843e4de557393c697e8abf36b750395590599dd0061413a0c4e6ca9bfd5bb0958 WHIRLPOOL 61f8118475bdf818b024fd3c7383c3c592b4a9483e14505d19ae89eafa5ef4767d4eeae9fd022845f82baad2f27d133d0d5178f5ebaa8fda866845cdcf2b0073
+EBUILD faust-0.9.58.ebuild 979 SHA256 f446e4d10a0ec19e2f21e28c55841ed284e08343297c8b92c013de093ec2e2f4 SHA512 6e0bbe846744270611cb9cbeb4df1145dda27f74c22d61a3f4a01dd3958db76a9d824e11e4dd63f3c6a58d5c10cb84642b705c9e48c3abc43a3edc3c20552612 WHIRLPOOL 2b1927b5675eb68b50eb53ab5095c985f56166487beec193b30b29472cae4f8281e0e4db4295f9b45ae84cffd8b5057ca49b4056e8867bb4fad5e2a09a4f7996
+EBUILD faust-0.9.67.ebuild 980 SHA256 d1e8689a4ffe68c5dc85d2711961c17ed9be69f83cc644d9fdf571074c60990d SHA512 4ab5bf7d7fa87e1301852fe87b8e69952f79ec82b99b4bba9475eae413162c3433630de6e6fa9f9831f2f6d715e2e36c9cdfd46bc8a67f37560f91a4b89848e9 WHIRLPOOL 4a1ad988053ee054c98cc7f523b3a78cdf86de8d6fbb9ce1665489b25e33b1d9ea40a9a530c62aba558b3d865d42b108848c660122ccdafcbb9711ef2b2c9961
+MISC ChangeLog 925 SHA256 29cc689fdd88f2d68fc0da7cff04893653b7b3f77bf6dcf8a5bae036387bf292 SHA512 1a17aebb765208d627dbbf73e8c19f24812e395e2418fea55a55952fc8d977dc0b1d035b1636fd41265768391e9dba4a9f953146ba7de81679a7e493597edc6c WHIRLPOOL 84d7aaa7ced9791bef30fc52190616d28e0f2532a2516d994f2bf549531f8ea0fcb038af0172b96906b7df99c533f9ede6d6e30f88fd815bc6f96293dd115a93
 MISC metadata.xml 476 SHA256 76acb7c4a6378724aec035e3d01539ce7da4582a845a4f805539a0e143ab7473 SHA512 adde9a354f6d202aaf1c2b52fa84011655de1074a7b3007bcde81ff90aaccc55a208a79b4f76d5d406bb697aee89cd689dc9fb332e7d2b854cea31007e96f9ae WHIRLPOOL 631595aa21f023a34c66d2373284e39f6cd21c173e3b6734eb59959c63839419b8699adcbe752160e03966c88eb720c147d524776774bb9494d4bc830dac5d12
