@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Sep 2014; Matt Henley <nwmatt@gmail.com>
+  faust-0.9.30.ebuild:  Removed as source files are no longer available
+  faust-0.9.58.ebuild:  Re-digest to fix file sums.  Add S=${WORKDIR}
+  faust-0.9.67.ebuild:  Added to reflect latest version on Sourceforge
+
   29 Jan 2013; Dominique Michel <dominique@tuyfamily.org> faust-0.9.58.eduild:
   added EAPI=5 -- removed uneeded die calls
   USE doc install the doxygen documentation
